tests/snapshots/sizes__schema_lint_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> ┌ schema wizard — y yank suggestion · r refresh · q close ──────────────┐   │
│  │no findings — schema looks clean                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
└──│                                                                       │───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · y yank suggestion · r refresh · F1 +2 more
