tests/snapshots/sizes__sessions_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  W┌ active sessions — pg_stat_activity — r refresh · q close ────────────────────────────────┐   │
│  O│     pid  user/app              state         age(s)   blocked  query                     │   │
└───│    1234  alice/psql            active          12.5      5678  UPDATE accounts SET balanc│───┘
┌ re│    5678  bob/pgman             idle in tx     300.0         -  BEGIN                     │───┐
│id │                                                                                          │   │
│1  │                                                                                          │   │
│2  │                                                                                          │   │
│3  │                                                                                          │   │
│4  │                                                                                          │   │
│5  │                                                                                          │   │
│6  │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   └──────────────────────────────────────────────────────────────────────────────────────────┘   │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · K terminate · r refresh · R auto-refresh · F1 +2 more
