tests/snapshots/sizes__sessions_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                    ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ active sessions — pg_stat_activity — r refresh · q close ─────────────┐   │
│  │     pid  user/app              state         age(s)   blocked  query  │   │
│  │    1234  alice/psql            active          12.5      5678  UPDATE │   │
│  │    5678  bob/pgman             idle in tx     300.0         -  BEGIN  │   │
└──│                                                                       │───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · K terminate · r refresh · F1 +3 more
