tests/snapshots/sizes__slow_queries_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                  │
│  FROM users                                                                                                          │
│  WH┌ slow queries — pg_stat_statements — r refresh · enter copy · q close ──────────────────────────────────────┐    │
│  OR│    total ms    mean ms     calls      rows  query                                                          │    │
└────│    12345.60      12.34   1000000   1000000  SELECT * FROM users WHERE active = true                        │────┘
┌ res│      800.00       3.20       250       250  UPDATE orders SET status = $1 WHERE id = $2                    │────┐
│id  │                                                                                                            │    │
│1   │                                                                                                            │    │
│2   │                                                                                                            │    │
│3   │                                                                                                            │    │
│4   │                                                                                                            │    │
│5   │                                                                                                            │    │
│6   │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    ├────────────────────────────────────────────────────────────────────────────────────────────────────────────┤    │
│    │SELECT * FROM users WHERE active = true                                                                     │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    │                                                                                                            │    │
│    └────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   j/k navigate · enter copy · r refresh · R auto-refresh · q / esc close · F1 help
